--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -50,20 +50,29 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
-  success: #3adb76,
-  warning: #ffae00,
-  alert: #cc4b37,
+  primary: #558188,
+  secondary: #ff9c5f,
+  success: #5fa292,
+  warning: #ff8b6c,
+  alert: #ff8b6c,
 );
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: $white;
-$body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$off-white: #feeed5;
+$dark-blue: #253939;
+// main blue ^
+$med-blue: #558188;
+$salmon: #ff8b6c;
+//these two ^ work together
+$light-blue: #5fa292;
+$orange: #ff9c5f;
+//these two ^ work together
+$body-background: $dark-blue;
+$body-font-color: $off-white;
+$body-font-family: 'Dosis', 'Raleway', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
