--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,34 +14,34 @@
 @include foundation-accordion;
 @include foundation-accordion-menu;
 @include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-card;
+// @include foundation-breadcrumbs;
+// @include foundation-button-group;
+// @include foundation-callout;
+// @include foundation-card;
 @include foundation-close-button;
 @include foundation-menu;
 @include foundation-menu-icon;
 @include foundation-drilldown-menu;
 @include foundation-dropdown;
 @include foundation-dropdown-menu;
-@include foundation-responsive-embed;
-@include foundation-label;
-@include foundation-media-object;
+// @include foundation-responsive-embed;
+// @include foundation-label;
+// @include foundation-media-object;
 @include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
+// @include foundation-orbit;
+// @include foundation-pagination;
 @include foundation-progress-bar;
 @include foundation-progress-element;
-@include foundation-meter-element;
-@include foundation-slider;
+// @include foundation-meter-element;
+// @include foundation-slider;
 @include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
+// @include foundation-reveal;
+// @include foundation-switch;
+// @include foundation-table;
 @include foundation-tabs;
 @include foundation-thumbnail;
 @include foundation-title-bar;
-@include foundation-tooltip;
+// @include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
@@ -49,3 +49,5 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+@import './scss/_home.scss';
