--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -60,19 +60,16 @@ $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
-$white: #fefefe;
+$white: #fff;
 $off-white: #feeed5;
-$dark-blue: #253939;
-// main blue ^
-$med-blue: #558188;
-$salmon: #ff8b6c;
-//these two ^ work together
-$light-blue: #5fa292;
-$orange: #ff9c5f;
-//these two ^ work together
-$body-background: $dark-blue;
-$body-font-color: $off-white;
-$body-font-family: 'Dosis', 'Raleway', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$basic-gray: #514947;
+// main gray ^
+$med-brown: #766151;
+$dark-brown: #48372f;
+$yellow: #fee202;
+$body-background: #1A1A1A;
+$body-font-color: $white;
+$body-font-family: 'Open Sans Condensed', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -113,7 +110,7 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: $body-font-family;
+$header-font-family: 'Lobster', $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
