--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -36,13 +36,13 @@ header {
   .off-menu {
     position: fixed;
     height: 100%;
-    // left: -100%;
+    left: -300px;
     top: 0;
     bottom: 0;
     background: rgba($white, .9);
     z-index: 9999;
     padding: 4rem 4rem 4rem 2rem;
-    transition: left .2s ease-in;
+    transition: left .3s ease-in;
     ul {
       list-style: none;
       margin: 0;
@@ -88,7 +88,7 @@ header {
       }
     }
     .off-menu {
-      left: 0 !important;
+      left: 0;
     }
   }
 }
