--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -11,12 +11,14 @@ body {
     justify-content: flex-start;
     &::after {
       content: '';
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       height: 100%;
       width: 100%;
       opacity: .5;
+      transition: background-size .5s ease;
+      transform: scaleX(1);
       animation: static 5s infinite;
       background: {
         image: url('/assets/silhouette-y-outline.png');
@@ -119,6 +121,12 @@ body {
       }
       &.headroom--unpinned {
         opacity: .5;
+      }
+    }
+    //waypoints fade out on scroll
+    &.fade-out {
+      &::after {
+        background-size: 0px;
       }
     }
   }
