--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -120,6 +120,7 @@ body {
     }
     .title {
       position: fixed;
+      bottom: 0;
       padding: 20px;
       transition: opacity .3s ease, transform .3s ease;
       h1 {
