--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -20,7 +20,6 @@ body {
       height: 100%;
       width: 100%;
       opacity: .5;
-      transition: height 1s ease;
       transform: scaleX(1);
       animation: static 5s infinite;
       background: {
@@ -40,82 +39,8 @@ body {
     //waypoints fade out on scroll
     &.fade-out {
       &::after {
-        height: 0;
-        animation: none;
-        // background-size: 500px 1px;
-      }
-    }
-    // static flicker
-    @keyframes static {
-      0% {
-        background-position: center center;
-        opacity: .6;
-      }
-      19% {
-        opacity: .7;
-      }
-      20% {
-        opacity: .8;
-        transform: skewX(0deg);
-      }
-      20.5% {
-        opacity: .7;
-        transform: skewX(5deg);
-      }
-      21% {
-        opacity: .6;
-        transform: skewX(0deg);
-      }
-      22% {
-      }
-      47% {
-        opacity: .6;
-      }
-      48% {
-        opacity: .8;
-        background-position: center center;
-      }
-      49% {
-        opacity: .5;
-        background-position: 45% center;
-        transform: skewX(0deg);
-      }
-      49.5% {
-        transform: skewX(-7deg);
-      }
-      50% {
-        opacity: .8;
-        transform: skewX(-5deg);
-      }
-      50.5% {
-        opacity: .3;
-        transform: skewX(0deg);
-      }
-      51% {
-        opacity: .6;
-        background-position: center center;
-      }
-      72% {
-        opacity: .6;
-        transform: skewY(0deg);
-      }
-      72.5% {
-        transform: skewY(6deg);
-      }
-      73% {
-        opacity: .3;
-        transform: skewY(5deg);
-      }
-      73.5% {
-        opacity: .7;
-        transform: skewY(0deg);
-      }
-      74% {
-        opacity: .6;
-      }
-      100% {
-        opacity: .6;
-        background-position: center center;
+        opacity: 0;
+        animation: cutout .8s 1;
       }
     }
     .title {
@@ -174,48 +99,83 @@ body {
     }
   }
   section.about {
+    position: relative;
     height: 100vh;
     @include breakpoint(medium) {
       height: 200vh;
     }
     @include breakpoint(large) {
-      height: 300vh;
+      height: 200vh;
     }
-    display: flex;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
-    .snowflake {
-      position: absolute;
-      transition: opacity .3s ease-in-out;
+    .bars-wrap {
+      position: fixed;
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: center;
+      align-items: flex-end;
       top: 0;
-      right: -50%;
+      right: -100%;
       height: 100%;
       width: 100%;
-      opacity: .02;
-    }
-    .bio-wrap {
-      position: relative;
-      opacity: 0;
-      padding: 3rem 0;
-      transform: translateX(-60px);
-      transition: opacity .4s ease, transform .5s ease;
-    }
-    &.fade-in {
-      .snowflake {
-        opacity: .05;
-      }
-      .bio-wrap {
-        opacity: 1;
-        transform: translateX(0);
-      }
-    }
-    @include breakpoint(medium) {
+      transition: right .5s 1s ease-out;
       h2 {
-        position: absolute;
-        left: -220px;
-        top: 50%;
-        transform: translateY(-59%) rotate(-90deg);
+        font-size: 4rem;
+        @include breakpoint(medium) {
+          font-size: 6rem;
+        }
+        @include breakpoint(large) {
+          font-size: 7.5rem;
+        }
+      }
+      h2 {
+        transition: transform .4s 1.95s ease, opacity .2s 1.95s ease;
+      }
+      p {
+        transition: transform .4s 2.15s ease, opacity .2s 2.15s ease;
+      }
+      h2, p {
+        position: relative;
+        right: -50px;
+        opacity: 0;
+      }
+    }
+    .top-wrap, .btm-wrap {
+      position: relative;
+      background: $white;
+      height: 0px;
+      * {
+        color: $black;
+      }
+    }
+    .top-wrap {
+      width: 70%;
+      right: -50px;
+      padding: 5rem 5rem 0 5rem;
+      transition: right .5s 1.5s linear, height .4s 1.5s ease;
+    }
+    .btm-wrap {
+      width: 90%;
+      right: -50px;
+      padding: 3rem 5rem 5rem 5rem;
+      transition: right .5s 1.5s linear, height .4s 1.5s ease;
+    }
+
+    &.fade-in {
+      .bars-wrap {
+        right: 0;
+        h2, p {
+          opacity: 1;
+          transform: translateX(-50px);
+        }
+      }
+      .top-wrap {
+        height: 345px;
+      }
+      .btm-wrap {
+        height: 300px;
+      }
+      .top-wrap, .btm-wrap {
+        right: 0;
       }
     }
     a[name='about'] {
