--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,9 +2,13 @@ body {
   main.main {
     position: relative;
     p, li, div, a, span {
-      font-size: rem-calc(18);
+      font-size: 1rem;
+      @include breakpoint(medium) {
+        font-size: rem-calc(18);
+      }
     }
   }
+  //HERO
   section.hero {
     position: relative;
     height: 100vh;
@@ -98,12 +102,10 @@ body {
       }
     }
   }
+  //ABOUT
   section.about {
     position: relative;
-    height: 100vh;
-    @include breakpoint(medium) {
-      height: 200vh;
-    }
+    height: 200vh;
     @include breakpoint(large) {
       height: 200vh;
     }
@@ -117,9 +119,9 @@ body {
       right: -100%;
       height: 100%;
       width: 100%;
-      transition: right .5s 1s ease-out;
+      transition: right .5s .2s ease-out;
       h2 {
-        font-size: 4rem;
+        font-size: 3rem;
         @include breakpoint(medium) {
           font-size: 6rem;
         }
@@ -127,16 +129,20 @@ body {
           font-size: 7.5rem;
         }
       }
-      h2 {
-        transition: transform .4s 1.95s ease, opacity .2s 1.95s ease;
-      }
-      p {
-        transition: transform .4s 2.15s ease, opacity .2s 2.15s ease;
-      }
       h2, p {
         position: relative;
         right: -50px;
         opacity: 0;
+      }
+      h2 {
+        line-height: 1;
+        @include breakpoint(medium) {
+          line-height: 1.4;
+        }
+        transition: transform .4s ease, opacity .2s ease;
+      }
+      p {
+        transition: transform .4s ease, opacity .2s ease;
       }
     }
     .top-wrap, .btm-wrap {
@@ -148,39 +154,99 @@ body {
       }
     }
     .top-wrap {
-      width: 70%;
       right: -50px;
-      padding: 5rem 5rem 0 5rem;
-      transition: right .5s 1.5s linear, height .4s 1.5s ease;
+      bottom: -1px;
+      width: 98%;
+      padding: 1rem 1rem 0 1rem;
+      @include breakpoint(medium) {
+        width: 70%;
+        padding: 5rem 5rem 0 5rem;
+      }
+      transition: right .5s .6s linear, height .4s ease;
     }
     .btm-wrap {
-      width: 90%;
       right: -50px;
-      padding: 3rem 5rem 5rem 5rem;
-      transition: right .5s 1.5s linear, height .4s 1.5s ease;
+      top: -1px;
+      width: 98%;
+      padding: .5rem 1rem .5rem 1rem;
+      @include breakpoint(medium) {
+        width: 90%;
+        padding: 3rem 5rem 5rem 5rem;
+      }
+      transition: right .5s .6s linear, height .4s ease;
     }
 
     &.fade-in {
       .bars-wrap {
         right: 0;
+        transition: right .5s 1s ease-out;
         h2, p {
           opacity: 1;
           transform: translateX(-50px);
         }
-      }
-      .top-wrap {
-        height: 345px;
-      }
-      .btm-wrap {
-        height: 300px;
+        h2 {
+          transition: transform .4s 1.95s ease, opacity .2s 1.95s ease;
+        }
+        p {
+          transition: transform .4s 2.15s ease, opacity .2s 2.15s ease;
+        }
       }
       .top-wrap, .btm-wrap {
         right: 0;
+      }
+      .top-wrap {
+        height: 400px;
+        @include breakpoint(medium) {
+          height: 360px;
+        }
+        @include breakpoint(large) {
+          height: 375px;
+        }
+        @include breakpoint(xlarge) {
+          height: 345px;
+        }
+        transition: right .5s 1.5s linear, height .4s 1.5s ease;
+      }
+      .btm-wrap {
+        height: 70px;
+        @include breakpoint(medium) {
+          height: 250px;
+        }
+        @include breakpoint(xlarge) {
+          height: 300px;
+        }
+        transition: right .5s 1.5s linear, height .4s 1.5s ease;
       }
     }
     a[name='about'] {
       position: relative;
       top: -200px;
+    }
+  }
+  //SKILL SET
+  section.skillset {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200vh;
+    .skill-web {
+      opacity: 0;
+      position: fixed;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: opacity .8s .5s ease;
+      img.snowflake {
+        width: 500px;
+        opacity: .1;
+        max-width: 95%;
+      }
+    }
+    &.fade-in {
+      transition: opacity .8s ease;
+      .skill-web {
+        opacity: 1;
+      }
     }
   }
 }
