abstract web add

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -73,8 +73,8 @@ body {
         }
       }
       h2 {
-        font-size: 1.75rem;
-        font-family: $header-font-family;
+        font-size: 1.59rem;
+        font-family: $body-font-family;
       }
       &.headroom--not-top {
         // hide when not at top - mobile
@@ -237,15 +237,35 @@ body {
       position: fixed;
       top: 50%;
       transform: translateY(-50%);
-      transition: opacity .8s .5s ease;
-      img.snowflake {
-        width: 500px;
-        opacity: .1;
+      transition: opacity 1s .5s ease;
+      svg {
+        opacity: 1;
         max-width: 95%;
+        animation: bounce 2s infinite;
+        width: 300px;
+        @include breakpoint(medium) {
+          width: 600px;
+        }
+        @include breakpoint(large) {
+          width: 1000px;
+        }
+      }
+      &::after {
+        content: '';
+        width: 200px;
+        height: 10px;
+        background-color: rgba($white, .05);
+        display: block;
+        margin-top: 15px;
+        border-radius: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0px 1px 1px rgba($white, .05);
+        animation: shadow-bounce 2s infinite;
       }
     }
     &.fade-in {
-      transition: opacity .8s ease;
+      transition: opacity 1s ease;
       .skill-web {
         opacity: 1;
       }
