--- a/scss/app.scss
+++ b/scss/app.scss
@@ -52,5 +52,6 @@
 
 @import './scss/mixins/_cutout-animation.scss';
 @import './scss/mixins/_static-animation.scss';
+@import './scss/mixins/_bounce-animation.scss';
 @import './scss/_home.scss';
 @import './scss/_nav.scss';
