--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -87,14 +87,13 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0px,
-  smallmedium: 481px,
   medium: 640px,
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small smallmedium medium large);
+$breakpoint-classes: (small medium large xlarge xxlarge);
 
 // 3. The Grid
 // -----------
