--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -255,7 +255,8 @@ body {
       opacity: 0;
       position: fixed;
       top: 50%;
-      transform: translateY(-50%);
+      left: 50%;
+      transform: translate(-50%, -50%);
       transition: opacity 1s .5s ease;
       .web-container, .icons-container {
         animation: bounce 2s infinite;
@@ -263,11 +264,11 @@ body {
       // WEB GRAPHIC
       svg {
         opacity: 1;
-        max-width: 90%;
         margin-left: auto;
         margin-right: auto;
         display: block;
         width: 300px;
+        max-width: 90%;
         @include breakpoint(medium) {
           width: 600px;
         }
