--- a/scss/app.scss
+++ b/scss/app.scss
@@ -34,14 +34,14 @@
 @include foundation-progress-element;
 // @include foundation-meter-element;
 // @include foundation-slider;
-@include foundation-sticky;
+// @include foundation-sticky;
 // @include foundation-reveal;
 // @include foundation-switch;
 // @include foundation-table;
-@include foundation-tabs;
+// @include foundation-tabs;
 @include foundation-thumbnail;
 @include foundation-title-bar;
-// @include foundation-tooltip;
+@include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
