--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -25,16 +25,17 @@ body {
       left: 0;
       height: 100%;
       width: 100%;
-      opacity: .5;
-      transform: scaleX(1);
       background: {
         image: url('/assets/silhouette-y-outline.png');
         repeat: no-repeat;
         attachment: fixed;
         position: center center;
       }
+      opacity: 1;
       background-size: 300px auto;
       @include breakpoint(medium) {
+        opacity: .5;
+        transform: scaleX(1);
         animation: static 5s infinite;
         background-size: 450px auto;
       }
@@ -112,30 +113,28 @@ body {
   //ABOUT
   section.about {
     position: relative;
+    @include breakpoint(small only) {
+      background: $black;
+    }
     height: 200vh;
     @include breakpoint(large) {
       height: 200vh;
     }
     // WRAP FOR TEXT AND TITLE
     .bars-wrap {
-      position: fixed;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 100%;
       display: flex;
       flex-flow: column wrap;
       justify-content: center;
       align-items: flex-end;
-      top: 0;
-      right: -100%;
-      height: 100%;
-      width: 100%;
       transition: right .5s .2s ease-out;
-      h2 {
-        font-size: 3rem;
-        @include breakpoint(medium) {
-          font-size: 6rem;
-        }
-        @include breakpoint(large) {
-          font-size: 7.5rem;
-        }
+      @include breakpoint(medium) {
+        position: fixed;
+        right: -100%;
       }
       h2, p {
         position: relative;
@@ -143,11 +142,16 @@ body {
         opacity: 0;
       }
       h2 {
+        font-size: 3rem;
         line-height: 1;
-        @include breakpoint(medium) {
-          line-height: 1.4;
-        }
         transition: transform .4s ease, opacity .2s ease;
+        @include breakpoint(medium) {
+          font-size: 6rem;
+          line-height: 1.2;
+        }
+        @include breakpoint(large) {
+          font-size: 7.5rem;
+        }
       }
       p {
         transition: transform .4s ease, opacity .2s ease;
@@ -163,16 +167,11 @@ body {
     }
     // TEXT
     .top-wrap {
-      right: -50px;
       bottom: -1px;
-      width: 98%;
-      padding: 1rem 1rem 0 1rem;
       @include breakpoint(medium) {
-        width: 70%;
-        font-size: rem-calc(18);
-        padding: 5rem 5rem 0 5rem;
+        right: -50px;
+        transition: right .5s .6s linear, height .4s ease;
       }
-      transition: right .5s .6s linear, height .4s ease;
       p, a {
         @include breakpoint(small only) {
           font-size: .8rem;
@@ -181,23 +180,21 @@ body {
     }
     //TITLE
     .btm-wrap {
-      right: -50px;
       top: -1px;
-      width: 98%;
-      padding: .5rem 1rem .5rem 1rem;
       @include breakpoint(medium) {
-        width: 90%;
-        padding: 3rem 5rem 5rem 5rem;
+        right: -50px;
+        transition: right .5s .6s linear, height .4s ease;
       }
-      transition: right .5s .6s linear, height .4s ease;
     }
     // ****
     // FADE TRANSITIONS
     // ****
     &.fade-in {
       .bars-wrap {
-        right: 0;
-        transition: right .5s 1s ease-out;
+        @include breakpoint(medium) {
+          right: 0;
+          transition: right .5s 1s ease-out;
+        }
         h2, p {
           opacity: 1;
           transform: translateX(-50px);
@@ -215,22 +212,43 @@ body {
       //TEXT
       .top-wrap {
         height: 400px;
+        width: 98%;
+        padding: 1rem 1rem 0 1rem;
         @include breakpoint(medium) {
-          height: 360px;
+          height: 375px;
+          width: 83%;
+          padding: 2rem 2rem 0 2rem;
+          p {
+            font-size: 1rem;
+          }
         }
         @include breakpoint(large) {
           height: 375px;
+          width: 75%;
+          padding: 3rem 3rem 0 3rem;
+          p {
+            font-size: rem-calc(18);
+          }
         }
         @include breakpoint(xlarge) {
           height: 345px;
+          width: 70%;
         }
         transition: right .5s 1.5s linear, height .4s 1.5s ease;
       }
       // TITLE
       .btm-wrap {
         height: 70px;
+        width: 98%;
+        padding: .5rem 1rem .5rem 1rem;
         @include breakpoint(medium) {
+          height: 200px;
+          width: 90%;
+          padding: 2rem 4rem 2rem 4rem;
+        }
+        @include breakpoint(large) {
           height: 250px;
+          padding: 3rem 5rem 5rem 5rem;
         }
         @include breakpoint(xlarge) {
           height: 300px;
@@ -499,7 +517,7 @@ body {
     padding: 400px 0 40px;
     .samples-wrap {
       overflow: hidden;
-      transition: opacity .5s ease;
+      transition: opacity 1s ease;
       h2 {
         margin-bottom: 2rem;
       }
@@ -562,14 +580,29 @@ body {
         height: 40px;
         width: 40px;
         z-index: 100;
-        text-align: center;
-        color: $black;
         font-size: 3rem;
-        line-height: .8;
         box-shadow: 3px 3px 0px 0px #000;
         transition: transform .2s ease, box-shadow .2s ease;
+        &::after {
+          content: '+';
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: $black;
+          transition: transform .2s ease;
+        }
         &:hover {
           box-shadow: 6px 6px 0px 0px #000;
+        }
+        &.active {
+          &::after {
+            transform: rotate(-45deg);
+          }
         }
       }
       .inner {
@@ -578,14 +611,24 @@ body {
         left: 0;
         height: 100%;
         width: 100%;
-        background: rgba($white, .75);
+        background: rgba($white, .85);
         display: flex;
+        flex-flow: column wrap;
         justify-content: center;
         align-items: center;
         opacity: 0;
         transition: opacity .2s ease, transform .3s ease;
         * {
           color: $black;
+        }
+        hr {
+          display: block;
+          width: 100%;
+          max-width: 50%;
+          margin: .5rem auto 2rem;
+          height: 1px;
+          background: $black;
+          border: none;
         }
         // when activate inner
         &.active {
