--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -249,9 +249,9 @@ $breadcrumbs-item-slash: true;
 $button-padding: 0.85em 1em;
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
-$button-background: $primary-color;
-$button-background-hover: scale-color($button-background, $lightness: -15%);
-$button-color: $white;
+$button-background: $yellow;
+$button-background-hover: scale-color($button-background, $lightness: -10%);
+$button-color: $black;
 $button-color-alt: $black;
 $button-radius: $global-radius;
 $button-sizes: (
